crates/jni/tests/ui/bind_java_type/fail/missing_comma_after_methods_block.stderr
error: expected `,`
  --> tests/ui/bind_java_type/fail/missing_comma_after_methods_block.rs:11:5
   |
11 |     fields = {
   |     ^^^^^^
